# BachelorLabs

./: .gitignore  LICENSE  README.md
AI-and-Machine-Learning/: iris-classification-sample.py
AI-and-Machine-Learning/Machine-Learning-Final/: README.md  main.py
AI-and-Machine-Learning/Neural-Networks-Final/: t1.py  t2.py  t4.py
C-Plus-Plus/Semester-2/Task7/: CMakeLists.txt  Main.cpp
C-Plus-Plus/Semester-2/TaskFinal/: CMakeLists.txt  main.cpp
C-Plus-Plus/Semester-2/TaskFinal/ext/SFML/include/SFML/Graphics/: CircleShape.hpp  ConvexShape.hpp  RectangleShape.hpp  RenderTexture.hpp  Shape.hpp  Vertex.hpp
Computer-Graphics/Lab1/: main.py  painter.py  shapes.py
Computer-Graphics/Lab2/: main.py  painter_window.py  polygon_shape.py  shape.py
Computer-Graphics/Lab3/: main.py
Computer-Graphics/Lab4/: lab4.py
Computer-Graphics/Lab5/: lab5.py
Computer-Graphics/MuseumPulseFinal/: README.md  requirements.txt
DataBase/: migration_typography.sql
DataBase/Task1/: 03_ПМИ_23_о_ИП_3_ТумановДМ_ЛР1_20-11-2025.docx  step1_init_schema.sql
DataBase/Task2/: 03_ПМИ_23_о_ИП_3_ТумановДМ_ЛР2_20-11-2025.docx  step3_add_foreign_keys.sql  step4_test_inserts.sql  step5_update_tests.sql  step6_delete_tests.sql
DataBase/Task3/: 03_ПМИ_23_о_ИП_3_ТумановДМ_ЛР3_20-11-2025.docx  step1_insert_values.sql  step2_insert_select.sql  step3_update.sql  step4_delete.sql
DataBase/Task4/: step2_aggregates.sql  step3_functions.sql  step4_order_limit.sql
DataBase/Task5/: 03_ПМИ_23_о_ИП_3_ТумановДМ_ЛР5_20-11-2025.docx  step1_distinct_joins.sql
DataBase/docker/: docker-compose.yml
Web/Semester-4/: Вариант 21
(+167 files in other folders)
